2010-04-20  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2008-12-30  Steven Bosscher  <steven@gcc.gnu.org>

	PR middle-end/38584
	* ipa-inline.c (compute_inline_parameters): When not optimizing,
	don't compute the inline parameters, just set them to 0 instead.

2010-04-20  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2010-03-01  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43220
	* tree-ssa-ccp.c (optimize_stack_restore): Do not optimize
	BUILT_IN_STACK_{SAVE,RESTORE} around alloca.

	2008-12-03  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/38360
	* tree-ssa-ccp.c (ccp_fold_builtin): Bail out if the builtin doesn't
	have the right number of arguments.

2010-04-20  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2009-01-24  Jakub Jelinek  <jakub@redhat.com>

	PR c/38957
	* c-typeck.c (c_finish_return): Handle POINTER_PLUS_EXPR the same way
	as PLUS_EXPR.

2010-04-20  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2008-12-08  Jakub Jelinek  <jakub@redhat.com>
	PR c/35443
	* c-pretty-print.c (pp_c_expression): Handle BIND_EXPR.

	2009-01-09  Jakub Jelinek  <jakub@redhat.com>

	PR c/35742
	* c-pretty-print.c (pp_c_expression): Handle GOTO_EXPR like
	BIND_EXPR.

2010-04-20  Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/43438
	* combine.c (make_extraction): Properly zero-/sign-extend an
	extraction of the low part of a CONST_INT.

2010-04-20  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43629
	* tree-ssa-ccp.c (likely_value): Scan for literal constants
	as well.  Reset all_undefined_operands if we have seen a
	constant value.

2010-04-18  Eric Botcazou  <ebotcazou@adacore.com>

	PR tree-optimization/43769
	* tree-sra.c (bitfield_overlaps_p): If the length of the element is
	self-referential, try to compute an upper bound.

2010-04-09  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Backport from mainline: