@@ -1,3 +1,11 @@
+2010-04-27  Richard Guenther  <rguenther@suse.de>
+
+ 	Backport from mainline:
+ 	2010-03-19  Michael Matz  <matz@suse.de>
+ 
+	PR c++/43116
+	* g++.dg/other/pr43116.C: New testcase.
+
 2010-04-20  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline:
