@@ -1,3 +1,12 @@
+2010-04-27  Richard Guenther  <rguenther@suse.de>
+
+ 	Backport from mainline:
+ 	2010-03-19  Michael Matz  <matz@suse.de>
+ 
+	PR c++/43116
+	* attribs.c (decl_attributes): When rebuilding a function pointer
+	type use the same qualifiers as the original pointer type.
+
 2010-04-20  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline
